Se suben cambios nuevos de front parte del correo electronico 23/11/2025

--- a/src/app/admin/componente-navegacion/componente-navegacion.component.css
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.css
@@ -39,6 +39,9 @@ background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, F
 
 }
 
-
-
-
+.capitalize {
+    text-transform: capitalize;
+}
+.font-weight-bold {
+    font-weight: 150 !important;
+}
