--- a/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
+++ b/src/app/shared/pie-de-pagina/pie-de-pagina.component.html
@@ -46,7 +46,7 @@
       <div class="col mb-3">
         <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="60%" height="30%"
           class="figura d-inline-block">
-        <p class="text-body-secondary">&copy; Última Actualización 2025 Derechos reservados</p>
+        <p class="text-body-secondary">&copy; 2025 Cocinas Integrales Mónica — Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
