--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand claseNueva" type="button" routerLink="/admin/">Bienvenido: <strong> {{nombreUsuario}}
       </strong></a>
-    <button style="background-color: rgb(255, 255, 255);" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+    <button class="navbar-toggler menuHamburguesa" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
