--- a/src/app/paginaInicial/visualizacion-productos-cliente/visualizacion-productos-cliente.component.css
+++ b/src/app/paginaInicial/visualizacion-productos-cliente/visualizacion-productos-cliente.component.css
@@ -58,3 +58,27 @@
 .estiloTexto{
   margin-top: 20px;
 }
+
+
+.botonVerDetalle{
+ background-color: #018bfc;
+ color: white;
+ border-radius: 10px;
+ text-decoration: none;
+ padding: 15px;
+ border: none;
+ cursor: pointer;
+ transition: all 0.2s ease; /* Suaviza la animación */
+}
+
+.botonVerDetalle:hover {
+  transform: translateY(-3px); /* Se eleva */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25); /* Sombra realista */
+
+}
+
+.botonVerDetalle:active {
+  transform: translateY(0px);
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.20);
+
+}
